@@ -167,6 +167,8 @@ reset_rng:
 ; Make sure to always put a colon between the two elements!
 ;
 ; NOTE: for each address you add here, you need to add the default values in the sram_defaults table below.
+; NOTE: if using SA-1, for addresses in $7E0000-$7E1FFF you must change the bank to $40 ($400000-$401FFF).
+; NOTE: if using FastROM, using $000000-$001FFF instead of $7E0000-$7E1FFF will make the save/load process a bit faster.
 
 save:
     dl !ram_checkpoint    : dw 192
