@@ -72,3 +72,4 @@ v0.2.3:
     - Change get_screen_number macro to a subroutine and made it check for LM3's $03BCDC routine installation at runtime, for more robustness.
     - Changed settings.asm formatting to be a bit easier to use.
     - Optimized defrag_oam routine by using the direct page (saves 2048 cycles in the best case!).
+    - Small speed improvement for SRAM saving/loading on FastROM.
